syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

import "DistLedgerCommonDefinitions.proto";

message RegisterRequest {
  string serviceName = 1;
  string qualificator = 2;
  string serverAddress = 3;
}

message RegisterResponse {
  int32 timestampId = 1;
}

message LookupRequest {
  string serviceName = 1;
  string qualificator = 2;
}

message LookupResponse {
  repeated string serverAddress = 1;
}

message DeleteRequest {
  string serviceName = 1;
  string serverAddress = 2;
}

message DeleteResponse {
}

service NamingService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}

